<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context=".Login.Sigin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:padding="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:ignore="MissingConstraints">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_name"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_margin="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/inputshape"
                android:drawableStart="@drawable/ic_add_peplo_f"
                android:drawablePadding="12dp"
                android:hint="@string/name"
                android:inputType="text"
                android:padding="10dp"
                android:textAlignment="viewStart"
                android:textColorHint="#807F7F" />


            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_phone"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_margin="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/inputshape"
                android:drawableStart="@drawable/ic_c_id_f"
                android:drawablePadding="12dp"
                android:hint="@string/mobile"
                android:inputType="phone"
                android:gravity="right"
                android:padding="10dp"
                android:textColorHint="#807F7F"
                tools:ignore="RtlCompat" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal">



                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_weight="0.5"
                    android:padding="5dp"
                    android:text="@string/title"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:ignore="RtlCompat" />

                <Spinner
                    android:id="@+id/spinnertitle"
                    style="@style/my_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_weight="1"
                    android:entries="@array/title"
                    android:padding="10dp"
                    android:spinnerMode="dropdown"
                    android:textAlignment="center"

                    android:verticalScrollbarPosition="right" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/inputshape"
                android:drawableStart="@drawable/ic_clok_f"
                android:drawablePadding="12dp"
                android:gravity="right"
                android:hint="@string/password"
                android:inputType="numberPassword"
                android:padding="12dp"
                android:textAlignment="viewStart" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/inputshape"
                android:drawableStart="@drawable/ic_clok_f"
                android:drawablePadding="12dp"
                android:hint="@string/confirmPassword"
                android:gravity="right"
                android:inputType="numberPassword"
                android:padding="12dp"
                android:textAlignment="viewStart" />

            <Button
                android:id="@+id/btn_sigin_n"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="15dp"
                android:text="@string/Register"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="24sp"

                android:textStyle="bold" />


        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/Register"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>