<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_gravity="right"
    android:layout_height="wrap_content">


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        tools:ignore="MissingConstraints">

        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            tools:ignore="RtlHardcoded">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_d"
                android:background="#FFFFFF"
                android:orientation="vertical"
                tools:ignore="RtlHardcoded">


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:backgroundTint="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/black" />

                    <TextView
                        android:id="@+id/text_name"
                        android:layout_width="150sp"
                        android:layout_height="match_parent"
                        android:padding="0dp"
                        android:textAlignment="center"
                        android:text="@string/name"
                        android:gravity="center"
                        android:textColor="@color/black"
                        android:textSize="15sp" />



                    <androidx.cardview.widget.CardView
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/black" />

                    <TextView
                        android:id="@+id/text1"
                        android:layout_width="150sp"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:textAlignment="center"
                        android:gravity="center"
                        android:text="@string/name_r2"
                        android:textSize="15sp" />




                    <androidx.cardview.widget.CardView
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/black" />

                    <TextView
                        android:id="@+id/text5"
                        android:layout_width="150sp"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:text="@string/name_r7"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textSize="15sp" />




                    <androidx.cardview.widget.CardView
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/black" />
                    <Button
                        android:id="@+id/btn_tr"
                        android:layout_width="150sp"
                        android:backgroundTint="#11AF17"
                        android:layout_height="wrap_content"
                        android:padding="1dp"
                        android:text="@string/tr"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textSize="15sp" />

                    <androidx.cardview.widget.CardView
                        android:layout_width="2dp"
                        android:layout_height="match_parent"
                        android:backgroundTint="@color/black" />

                </LinearLayout>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:backgroundTint="@color/black" />


            </LinearLayout>

        </HorizontalScrollView>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>